--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,6 @@
 </div>
 
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
